# forgeflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COMING_FROM.md  DATA.md  ENGINE.md  EXECUTION.md  LLM.md  WORKFLOWS.md
forgeflow/: __init__.py  blocks.py  cli.py  config.py  contract.py  db.py  engine.py  gc.py  httpd.py  loader.py  localmodel.py  queue.py  runner.py  select.py  util.py
packs/demo/: project.yaml.example
packs/demo/workflows/: filebug.yaml  notify.yaml
scripts/: check_generic.sh  export_bundle.py
tests/: chaos_driver.py  fake_agent_cli.py  helpers.py  resume_driver.py  test_assembly.py  test_blocks.py  test_chaos.py  test_cli.py  test_concurrency.py  test_config.py  test_contract.py  test_decisions.py  test_e2e.py  test_enrich.py  test_events.py  test_httpd.py  test_join.py  test_llm_cli.py  test_loader.py  test_localmodel.py  test_maintenance.py  test_openai_compat.py  test_packblocks.py  test_policy.py  test_queue.py  test_recall.py  test_replay.py  test_resume.py  test_retrieval.py  test_runner.py  test_schedule.py  test_select.py  test_version.py  test_versioning.py
tests/data/chaos/: chaos.yaml
tests/data/join/: collect.yaml  fan.yaml  probe.yaml
tests/data/resume/: resume.yaml
