[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow"
version = "0.1.0"
description = "YAML-configurable, pluggable, deterministic workflow engine — SQLite-backed, totality-checked at load, crash-resumable"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[project.scripts]
forgeflow = "forgeflow.cli:main"

[tool.setuptools]
packages = ["forgeflow"]
