[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeflow"
version = "0.4.0"
description = "YAML-configurable, pluggable, deterministic workflow engine — SQLite-backed, totality-checked at load, crash-resumable"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mrgoudan" }]
keywords = ["workflow", "orchestration", "sqlite", "durable-execution", "llm", "agent", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Distributed Computing",
]
dependencies = ["pyyaml"]

[project.urls]
Homepage = "https://github.com/Mrgoudan/forgeflow"
Repository = "https://github.com/Mrgoudan/forgeflow"

[project.scripts]
forgeflow = "forgeflow.cli:main"

[tool.setuptools]
packages = ["forgeflow"]
